fixing spacing in header when showing resource changes

--- a/theme.css
+++ b/theme.css
@@ -96,7 +96,7 @@ a{
     }
     #left-column{
         width:100%;
-        margin-top: 70px
+        margin-top: 100px;
     }
     .game-header{
         width:82%;
